--- a/18BCE259_Prac_2.ipynb
+++ b/18BCE259_Prac_2.ipynb
@@ -360,34 +360,28 @@
       "cell_type": "code",
       "execution_count": 11,
       "source": [
-        "# Python3 program to check if a given\n",
-        "# instance of 8 puzzle is solvable or not\n",
-        " \n",
-        "# A utility function to count\n",
-        "# inversions in given array 'arr[]'\n",
-        "def getInvCount(arr) :\n",
-        " \n",
+        "def getInvCount(arr):\n",
         "    inv_count = 0\n",
-        "    for i in range(0, 2) :\n",
-        "        for j in range(i + 1, 3) :\n",
-        "           \n",
-        "            # Value 0 is used for empty space\n",
-        "            if (arr[j][i] > 0 and arr[j][i] > arr[i][j]) :\n",
+        "    empty_value = -1\n",
+        "    for i in range(0, 9):\n",
+        "        for j in range(i + 1, 9):\n",
+        "            if arr[j] != empty_value and arr[i] != empty_value and arr[i] > arr[j]:\n",
         "                inv_count += 1\n",
         "    return inv_count\n",
+        " \n",
         "     \n",
         "# This function returns true\n",
         "# if given 8 puzzle is solvable.\n",
         "def isSolvable(puzzle) :\n",
         " \n",
         "    # Count inversions in given 8 puzzle\n",
-        "    invCount = getInvCount(puzzle)\n",
-        "   \n",
+        "    inv_count = getInvCount([j for sub in puzzle for j in sub])\n",
+        " \n",
         "    # return true if inversion count is even.\n",
-        "    return (invCount % 2 == 0)\n",
+        "    return (inv_count % 2 == 0)\n",
         "     \n",
         "    # Driver code\n",
-        "puzzle = [[1,2,3],[4,6,5],[7,0,8]]\n",
+        "puzzle = [[4, 1, 0], [7, 2, 3], [5, 8, 6]]\n",
         "if(isSolvable(puzzle)) :\n",
         "    print(\"Solvable\")\n",
         "else :\n",
@@ -433,20 +427,40 @@
         "            break\n",
         "        \n",
         "        if canMoveLeft(node) and node.act != \"right\":\n",
-        "            Queue.append(moveLeft(node))\n",
+        "            node_l = moveLeft(node)\n",
+        "            if(CheckIfFinal(node_l)):\n",
+        "                print(\"Final State Obtained\")\n",
+        "                node = node_l\n",
+        "                break\n",
+        "            Queue.append(node_l)\n",
         "        if canMoveRight(node) and node.act != \"left\":\n",
-        "            Queue.append(moveRight(node))\n",
+        "            node_r = moveRight(node)\n",
+        "            if(CheckIfFinal(node_r)):\n",
+        "                print(\"Final State Obtained\")\n",
+        "                node = node_r\n",
+        "                break\n",
+        "            Queue.append(node_r)\n",
         "        if canMoveUp(node) and node.act != \"down\":\n",
-        "            Queue.append(moveUp(node))\n",
+        "            node_u = moveUp(node)\n",
+        "            if(CheckIfFinal(node_u)):\n",
+        "                print(\"Final State Obtained\")\n",
+        "                node = node_u\n",
+        "                break\n",
+        "            Queue.append(node_u)\n",
         "        if canMoveDown(node) and node.act != \"up\":\n",
-        "            Queue.append(moveDown(node))\n",
+        "            node_d = moveDown(node)\n",
+        "            if(CheckIfFinal(node_d)):\n",
+        "                print(\"Final State Obtained\")\n",
+        "                node = node_d\n",
+        "                break\n",
+        "            Queue.append(node_d)\n",
         "\n",
         "    moves = []\n",
         "    while (node != None):\n",
         "        moves.insert(0, node.act)\n",
         "        node = node.parent\n",
         "\n",
-        "    print(\"Solution: \")\n",
+        "    print(f\"Solution: {len(moves) - 1} moves\")\n",
         "    print(\"===========================\")\n",
         "    print(\"Initial Node: \")\n",
         "\n",
@@ -480,7 +494,7 @@
           "name": "stdout",
           "text": [
             "Final State Obtained\n",
-            "Solution: \n",
+            "Solution: 2 moves\n",
             "===========================\n",
             "Initial Node: \n",
             "None\n",
@@ -504,7 +518,8 @@
       "cell_type": "code",
       "execution_count": 14,
       "source": [
-        "initial_node = Node(np.array([[0,1,3],[4,2,6],[7,5,8]]), None, None)\n",
+        "%%time\n",
+        "initial_node = Node(np.array([[4, 3, 6], [2, 0, 1], [7, 5, 8]]), None, None)\n",
         "BFS(initial_node)"
       ],
       "outputs": [
@@ -513,10 +528,34 @@
           "name": "stdout",
           "text": [
             "Final State Obtained\n",
-            "Solution: \n",
+            "Solution: 10 moves\n",
             "===========================\n",
             "Initial Node: \n",
             "None\n",
+            "array([[4, 3, 6],\n",
+            "       [2, 0, 1],\n",
+            "       [7, 5, 8]])\n",
+            "right\n",
+            "array([[4, 3, 6],\n",
+            "       [2, 1, 0],\n",
+            "       [7, 5, 8]])\n",
+            "up\n",
+            "array([[4, 3, 0],\n",
+            "       [2, 1, 6],\n",
+            "       [7, 5, 8]])\n",
+            "left\n",
+            "array([[4, 0, 3],\n",
+            "       [2, 1, 6],\n",
+            "       [7, 5, 8]])\n",
+            "down\n",
+            "array([[4, 1, 3],\n",
+            "       [2, 0, 6],\n",
+            "       [7, 5, 8]])\n",
+            "left\n",
+            "array([[4, 1, 3],\n",
+            "       [0, 2, 6],\n",
+            "       [7, 5, 8]])\n",
+            "up\n",
             "array([[0, 1, 3],\n",
             "       [4, 2, 6],\n",
             "       [7, 5, 8]])\n",
@@ -535,7 +574,9 @@
             "right\n",
             "array([[1, 2, 3],\n",
             "       [4, 5, 6],\n",
-            "       [7, 8, 0]])\n"
+            "       [7, 8, 0]])\n",
+            "CPU times: user 79.2 ms, sys: 1.51 ms, total: 80.7 ms\n",
+            "Wall time: 77.5 ms\n"
           ]
         }
       ],
@@ -547,7 +588,8 @@
       "cell_type": "code",
       "execution_count": 15,
       "source": [
-        "initial_node = Node(np.array([[1,2,3],[4,0,5],[6,7,8]]), None, None)\n",
+        "%%time\n",
+        "initial_node = Node(np.array([[0,1,2],[4,5,3],[7,8,6]]), None, None)\n",
         "BFS(initial_node)"
       ],
       "outputs": [
@@ -555,7 +597,32 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Puzzle Not Solvable\n"
+            "Final State Obtained\n",
+            "Solution: 4 moves\n",
+            "===========================\n",
+            "Initial Node: \n",
+            "None\n",
+            "array([[0, 1, 2],\n",
+            "       [4, 5, 3],\n",
+            "       [7, 8, 6]])\n",
+            "right\n",
+            "array([[1, 0, 2],\n",
+            "       [4, 5, 3],\n",
+            "       [7, 8, 6]])\n",
+            "right\n",
+            "array([[1, 2, 0],\n",
+            "       [4, 5, 3],\n",
+            "       [7, 8, 6]])\n",
+            "down\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 5, 0],\n",
+            "       [7, 8, 6]])\n",
+            "down\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 5, 6],\n",
+            "       [7, 8, 0]])\n",
+            "CPU times: user 5.16 ms, sys: 258 µs, total: 5.42 ms\n",
+            "Wall time: 5.02 ms\n"
           ]
         }
       ],
@@ -567,7 +634,8 @@
       "cell_type": "code",
       "execution_count": 16,
       "source": [
-        "initial_node = Node(np.array([[1,2,3],[4,0,5],[7,6,8]]), None, None)\n",
+        "%%time\n",
+        "initial_node = Node(np.array([[1, 2, 3], [4, 0, 5], [7, 8, 6]]), None, None)\n",
         "BFS(initial_node)"
       ],
       "outputs": [
@@ -575,7 +643,24 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Puzzle Not Solvable\n"
+            "Final State Obtained\n",
+            "Solution: 2 moves\n",
+            "===========================\n",
+            "Initial Node: \n",
+            "None\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 0, 5],\n",
+            "       [7, 8, 6]])\n",
+            "right\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 5, 0],\n",
+            "       [7, 8, 6]])\n",
+            "down\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 5, 6],\n",
+            "       [7, 8, 0]])\n",
+            "CPU times: user 4.29 ms, sys: 52 µs, total: 4.34 ms\n",
+            "Wall time: 4.23 ms\n"
           ]
         }
       ],
