--- a/18BCE259_Prac_3.ipynb
+++ b/18BCE259_Prac_3.ipynb
@@ -443,35 +443,35 @@
           "name": "stdout",
           "text": [
             "array([[1, 2, 3],\n",
-            "       [4, 5, 6],\n",
-            "       [7, 0, 8]])\n",
-            "array([[1, 2, 3],\n",
-            "       [4, 0, 6],\n",
-            "       [7, 5, 8]])\n",
-            "array([[1, 2, 3],\n",
-            "       [0, 4, 6],\n",
-            "       [7, 5, 8]])\n",
-            "array([[1, 2, 3],\n",
-            "       [7, 4, 6],\n",
-            "       [0, 5, 8]])\n",
-            "array([[1, 2, 3],\n",
-            "       [7, 4, 6],\n",
-            "       [5, 0, 8]])\n",
-            "array([[1, 2, 3],\n",
-            "       [7, 4, 6],\n",
-            "       [5, 8, 0]])\n",
-            "array([[1, 2, 3],\n",
-            "       [7, 4, 0],\n",
-            "       [5, 8, 6]])\n",
+            "       [4, 5, 0],\n",
+            "       [7, 8, 6]])\n",
             "array([[1, 2, 0],\n",
-            "       [7, 4, 3],\n",
-            "       [5, 8, 6]])\n",
+            "       [4, 5, 3],\n",
+            "       [7, 8, 6]])\n",
             "array([[1, 0, 2],\n",
-            "       [7, 4, 3],\n",
-            "       [5, 8, 6]])\n",
-            "array([[1, 4, 2],\n",
-            "       [7, 0, 3],\n",
-            "       [5, 8, 6]])\n"
+            "       [4, 5, 3],\n",
+            "       [7, 8, 6]])\n",
+            "array([[1, 5, 2],\n",
+            "       [4, 0, 3],\n",
+            "       [7, 8, 6]])\n",
+            "array([[1, 5, 2],\n",
+            "       [4, 3, 0],\n",
+            "       [7, 8, 6]])\n",
+            "array([[1, 5, 2],\n",
+            "       [4, 3, 6],\n",
+            "       [7, 8, 0]])\n",
+            "array([[1, 5, 2],\n",
+            "       [4, 3, 6],\n",
+            "       [7, 0, 8]])\n",
+            "array([[1, 5, 2],\n",
+            "       [4, 0, 6],\n",
+            "       [7, 3, 8]])\n",
+            "array([[1, 5, 2],\n",
+            "       [0, 4, 6],\n",
+            "       [7, 3, 8]])\n",
+            "array([[1, 5, 2],\n",
+            "       [7, 4, 6],\n",
+            "       [0, 3, 8]])\n"
           ]
         }
       ],
@@ -503,20 +503,40 @@
         "            continue\n",
         "        \n",
         "        if canMoveLeft(node) and node.act != \"right\":\n",
-        "            Stack.append(moveLeft(node))\n",
+        "            node_l = moveLeft(node)\n",
+        "            if(CheckIfFinal(node_l)):\n",
+        "                print(\"Final State Obtained\")\n",
+        "                node = node_l\n",
+        "                break\n",
+        "            Stack.append(node_l)\n",
         "        if canMoveRight(node) and node.act != \"left\":\n",
-        "            Stack.append(moveRight(node))\n",
+        "            node_r = moveRight(node)\n",
+        "            if(CheckIfFinal(node_r)):\n",
+        "                print(\"Final State Obtained\")\n",
+        "                node = node_r\n",
+        "                break\n",
+        "            Stack.append(node_r)\n",
         "        if canMoveUp(node) and node.act != \"down\":\n",
-        "            Stack.append(moveUp(node))\n",
+        "            node_u = moveUp(node)\n",
+        "            if(CheckIfFinal(node_u)):\n",
+        "                print(\"Final State Obtained\")\n",
+        "                node = node_u\n",
+        "                break\n",
+        "            Stack.append(node_u)\n",
         "        if canMoveDown(node) and node.act != \"up\":\n",
-        "            Stack.append(moveDown(node))\n",
+        "            node_d = moveDown(node)\n",
+        "            if(CheckIfFinal(node_d)):\n",
+        "                print(\"Final State Obtained\")\n",
+        "                node = node_d\n",
+        "                break\n",
+        "            Stack.append(node_d)\n",
         "\n",
         "    moves = []\n",
         "    while (node != None):\n",
         "        moves.insert(0, node.act)\n",
         "        node = node.parent\n",
         "\n",
-        "    print(\"Solution: \")\n",
+        "    print(f\"Solution: {len(moves) - 1} moves\")\n",
         "    print(\"===========================\")\n",
         "    print(\"Initial Node: \")\n",
         "\n",
@@ -550,7 +570,7 @@
           "name": "stdout",
           "text": [
             "Final State Obtained\n",
-            "Solution: \n",
+            "Solution: 2 moves\n",
             "===========================\n",
             "Initial Node: \n",
             "None\n",
@@ -580,6 +600,7 @@
       "cell_type": "code",
       "execution_count": 15,
       "source": [
+        "%%time\n",
         "initial_node = Node(np.array([[0,1,3],[4,2,6],[7,5,8]]), None, None)\n",
         "DFS(initial_node)"
       ],
@@ -589,7 +610,7 @@
           "name": "stdout",
           "text": [
             "Final State Obtained\n",
-            "Solution: \n",
+            "Solution: 4 moves\n",
             "===========================\n",
             "Initial Node: \n",
             "None\n",
@@ -611,7 +632,9 @@
             "right\n",
             "array([[1, 2, 3],\n",
             "       [4, 5, 6],\n",
-            "       [7, 8, 0]])\n"
+            "       [7, 8, 0]])\n",
+            "CPU times: user 34.9 ms, sys: 648 µs, total: 35.6 ms\n",
+            "Wall time: 32.7 ms\n"
           ]
         }
       ],
@@ -623,6 +646,7 @@
       "cell_type": "code",
       "execution_count": 16,
       "source": [
+        "%%time\n",
         "initial_node = Node(np.array([[4, 3, 6], [2, 0, 1], [7, 5, 8]]), None, None, 0)\n",
         "DFS(initial_node, 15)"
       ],
@@ -632,7 +656,7 @@
           "name": "stdout",
           "text": [
             "Final State Obtained\n",
-            "Solution: \n",
+            "Solution: 14 moves\n",
             "===========================\n",
             "Initial Node: \n",
             "None\n",
@@ -694,7 +718,9 @@
             "right\n",
             "array([[1, 2, 3],\n",
             "       [4, 5, 6],\n",
-            "       [7, 8, 0]])\n"
+            "       [7, 8, 0]])\n",
+            "CPU times: user 331 ms, sys: 7.15 ms, total: 338 ms\n",
+            "Wall time: 332 ms\n"
           ]
         }
       ],
@@ -706,15 +732,165 @@
       "cell_type": "code",
       "execution_count": 17,
       "source": [
-        "initial_node = Node(np.array([[1,2,3],[4,0,5],[7,6,8]]), None, None, 0)\n",
-        "DFS(initial_node, 40)"
+        "%%time\n",
+        "initial_node = Node(np.array([[0,1,2],[4,5,3],[7,8,6]]), None, None, 0)\n",
+        "DFS(initial_node, 20)"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Puzzle Not Solvable\n"
+            "Final State Obtained\n",
+            "Solution: 18 moves\n",
+            "===========================\n",
+            "Initial Node: \n",
+            "None\n",
+            "array([[0, 1, 2],\n",
+            "       [4, 5, 3],\n",
+            "       [7, 8, 6]])\n",
+            "down\n",
+            "array([[4, 1, 2],\n",
+            "       [0, 5, 3],\n",
+            "       [7, 8, 6]])\n",
+            "down\n",
+            "array([[4, 1, 2],\n",
+            "       [7, 5, 3],\n",
+            "       [0, 8, 6]])\n",
+            "right\n",
+            "array([[4, 1, 2],\n",
+            "       [7, 5, 3],\n",
+            "       [8, 0, 6]])\n",
+            "up\n",
+            "array([[4, 1, 2],\n",
+            "       [7, 0, 3],\n",
+            "       [8, 5, 6]])\n",
+            "left\n",
+            "array([[4, 1, 2],\n",
+            "       [0, 7, 3],\n",
+            "       [8, 5, 6]])\n",
+            "down\n",
+            "array([[4, 1, 2],\n",
+            "       [8, 7, 3],\n",
+            "       [0, 5, 6]])\n",
+            "right\n",
+            "array([[4, 1, 2],\n",
+            "       [8, 7, 3],\n",
+            "       [5, 0, 6]])\n",
+            "up\n",
+            "array([[4, 1, 2],\n",
+            "       [8, 0, 3],\n",
+            "       [5, 7, 6]])\n",
+            "left\n",
+            "array([[4, 1, 2],\n",
+            "       [0, 8, 3],\n",
+            "       [5, 7, 6]])\n",
+            "down\n",
+            "array([[4, 1, 2],\n",
+            "       [5, 8, 3],\n",
+            "       [0, 7, 6]])\n",
+            "right\n",
+            "array([[4, 1, 2],\n",
+            "       [5, 8, 3],\n",
+            "       [7, 0, 6]])\n",
+            "up\n",
+            "array([[4, 1, 2],\n",
+            "       [5, 0, 3],\n",
+            "       [7, 8, 6]])\n",
+            "left\n",
+            "array([[4, 1, 2],\n",
+            "       [0, 5, 3],\n",
+            "       [7, 8, 6]])\n",
+            "up\n",
+            "array([[0, 1, 2],\n",
+            "       [4, 5, 3],\n",
+            "       [7, 8, 6]])\n",
+            "right\n",
+            "array([[1, 0, 2],\n",
+            "       [4, 5, 3],\n",
+            "       [7, 8, 6]])\n",
+            "right\n",
+            "array([[1, 2, 0],\n",
+            "       [4, 5, 3],\n",
+            "       [7, 8, 6]])\n",
+            "down\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 5, 0],\n",
+            "       [7, 8, 6]])\n",
+            "down\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 5, 6],\n",
+            "       [7, 8, 0]])\n",
+            "CPU times: user 985 ms, sys: 2.8 ms, total: 988 ms\n",
+            "Wall time: 981 ms\n"
+          ]
+        }
+      ],
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "source": [
+        "%%time\n",
+        "initial_node = Node(np.array([[1, 2, 3], [4, 0, 5], [7, 8, 6]]), None, None, 0)\n",
+        "DFS(initial_node, 10)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Final State Obtained\n",
+            "Solution: 10 moves\n",
+            "===========================\n",
+            "Initial Node: \n",
+            "None\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 0, 5],\n",
+            "       [7, 8, 6]])\n",
+            "down\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 8, 5],\n",
+            "       [7, 0, 6]])\n",
+            "right\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 8, 5],\n",
+            "       [7, 6, 0]])\n",
+            "up\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 8, 0],\n",
+            "       [7, 6, 5]])\n",
+            "left\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 0, 8],\n",
+            "       [7, 6, 5]])\n",
+            "down\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 6, 8],\n",
+            "       [7, 0, 5]])\n",
+            "right\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 6, 8],\n",
+            "       [7, 5, 0]])\n",
+            "up\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 6, 0],\n",
+            "       [7, 5, 8]])\n",
+            "left\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 0, 6],\n",
+            "       [7, 5, 8]])\n",
+            "down\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 5, 6],\n",
+            "       [7, 0, 8]])\n",
+            "right\n",
+            "array([[1, 2, 3],\n",
+            "       [4, 5, 6],\n",
+            "       [7, 8, 0]])\n",
+            "CPU times: user 12 ms, sys: 4.01 ms, total: 16 ms\n",
+            "Wall time: 13.7 ms\n"
           ]
         }
       ],
